라이어게임 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
+# SSL
+server.ssl.key-store=classpath:file.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=1234
